change the layout of the app

--- a/public/stylesheets/map/inputBtn.scss
+++ b/public/stylesheets/map/inputBtn.scss
@@ -32,9 +32,11 @@
     display: inline-block; 
 }
 
+/*
 .verticalLine {
     border-left: thin solid #000;
 }
+*/
 
 .navbar-brand {
     display: inline-block; 
