--- a/public/stylesheets/layout/layout.scss
+++ b/public/stylesheets/layout/layout.scss
@@ -9,10 +9,9 @@
     background-color: #111;
     overflow-x: hidden;
     transition: 0.5s;
-    padding-top: 100px;
-
+    padding-top: 60px;
 }
-//layout lsl
+
 .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
@@ -20,21 +19,18 @@
     color: #818181;
     display: block;
     transition: 0.3s
-
 }
 
 .sidenav a:hover, .offcanvas a:focus{
     color: #f1f1f1;
-
 }
 
 .closebtn {
     position: absolute;
-    top: 45px;
+    top: 0;
     right: 25px;
     font-size: 36px !important;
     margin-left: 50px;
-
 }
 
 #main {
