--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -1,12 +1,12 @@
 extends layouts/layout.jade
 
 block con
+     link(rel='stylesheet', href='build/css/map.min.css')
      #gmap
      .overlap 
          button.btn.btn-default.btn-backward.glyphicon.glyphicon-backward(aria-label="back") 
          button.btn.btn-default.btn-play.glyphicon.glyphicon-pause(aria-label="play") 
          button.btn.btn-default.btn-forward.glyphicon.glyphicon-forward(aria-label="forward") 
          button.btn.btn-default.btn-fast-forward.glyphicon.glyphicon-fast-forward(aria-label="fast-forward") 
-    //#wrapper
-     //   #playback-controller 
-           h2 Controller place     
+     script(type='text/javascript', src='https://maps.google.com/maps/api/js?sensor=true')
+     script(src='build/js/client.min.js')  
