--- a/public/views/layouts/layout.jade
+++ b/public/views/layouts/layout.jade
@@ -7,40 +7,39 @@ html
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css', integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7', crossorigin='anonymous')
     // Optional theme
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css', integrity='sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r', crossorigin='anonymous')
-    link(rel='stylesheet', href='build/css/main.min.css')
+    link(rel='stylesheet', href='build/css/layout.min.css')
   body
-    nav.navbar.navbar-default.navbar-fixed-top
-       .container-fluid
-         // Brand and toggle get grouped for better mobile display
-         .navbar-header
-           button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
-             span.sr-only Toggle navigation
-             span.icon-bar
-             span.icon-bar
-             span.icon-bar
-           a.navbar-brand(href='#') 
-             span.openbtn ☰  
-           .time-panel.verticalLine
-             h5.time-display-date 
-             h5.time-display-time
-                      // Collect the nav links, forms, and other content for toggling
-         #bs-example-navbar-collapse-1.collapse.navbar-collapse
     #mySidenav.sidenav
          a.closebtn(href='javascript:void(0)') ×
          a(href='#') Transpondent Analytics
          a(href='#') Cohangout Analytics
          a(href='#') High utilization Analytics
          a(href='#') ETA Analytics   
-
+    
     #main
+      nav.navbar.navbar-default
+         .container-fluid
+           // Brand and toggle get grouped for better mobile display
+           .navbar-header
+             button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
+               span.sr-only Toggle navigation
+               span.icon-bar
+               span.icon-bar
+               span.icon-bar
+             a.navbar-brand(href='#') 
+               span.openbtn ☰  
+             .time-panel.verticalLine
+               h5.time-display-date 
+               h5.time-display-time
+                        // Collect the nav links, forms, and other content for toggling
+           #bs-example-navbar-collapse-1.collapse.navbar-collapse
+
       block con
 
     // Latest compiled and minified JavaScript
     //script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
     //script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', integrity='sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS', crossorigin='anonymous')
-    script(type='text/javascript', src='https://maps.google.com/maps/api/js?sensor=true')
     //script(src='//d3js.org/topojson.v1.min.js')
     //script(src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js')
     //script(src='http://malsup.github.com/jquery.form.js')
-    //script(src='build/js/main.js')
-    script(src='/client.min.js')  
+    script(src='build/js/main.min.js')
