--- a/public/views/layouts/layout.jade
+++ b/public/views/layouts/layout.jade
@@ -11,10 +11,9 @@ html
   body
     #mySidenav.sidenav
          a.closebtn(href='javascript:void(0)') ×
-         a(href='#') Transpondent Analytics
-         a(href='#') Cohangout Analytics
-         a(href='#') High utilization Analytics
-         a(href='#') ETA Analytics   
+         a(href='map.html') Sense Making
+         a(href='eta.html') ETA Prediction
+         a(href='highUtil.html') High utilization Analytics
     
     #main
       nav.navbar.navbar-default
