--- a/public/stylesheets/layout/layout.scss
+++ b/public/stylesheets/layout/layout.scss
@@ -30,6 +30,7 @@ body {
     border-color: #3c763d;
     color: white;
     background-image: linear-gradient(to bottom,#5cb85c 0,#3c763d 100%);
+    z-index:2;
 }
 
 .navbar-default .navbar-brand {
@@ -114,4 +115,18 @@ hr{
     width: 95%;
     border: 0;
     border-top: 1px solid rgba(255,255,255,0.3);
+}
+#footer {
+    color: #ddd;
+    width: 100%;
+    height: 20px;
+    bottom: 50px;
+    position: absolute;
+//    left: 0;
+}
+
+#footer p {
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
 }
