add interceptor to check for user login

--- a/public/views/layouts/layout.jade
+++ b/public/views/layouts/layout.jade
@@ -21,9 +21,10 @@ html
          hr
          a(href='#') Reports
          hr
-         a#login(href='/' disabled="disabled") Login 
+         a#login(href='javascript:void(0)') Login 
          #footer 
             p A Collabration between MPA & IBM @ alpha version
+    script(src='build/js/interceptor.min.js')
     
     #main
       nav.navbar.navbar-default
