heatmap for high utilization

--- a/public/stylesheets/layout/layout.scss
+++ b/public/stylesheets/layout/layout.scss
@@ -25,6 +25,10 @@ body {
         background-image: url("../../images/background_2560x1600_alpha25.png");
     }
 }
+
+.navbar {
+    margin-bottom: 0px;
+}
 //overwrite navbar-default
 .navbar-default {
     border-color: #3c763d;
