--- a/public/views/highUtil.jade
+++ b/public/views/highUtil.jade
@@ -1,8 +1,7 @@
 extends layouts/layout.jade
 
 block con
-    .container
-      .main
-        h2 High Utilization Prediction 
-        hr
+    link(rel='stylesheet', href='http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css')
+    link(rel='stylesheet', href='/build/css/highUtil.min.css')
+    #map
     script(src='build/js/highUtil.min.js')  
