add playback function to heatmap.js

--- a/public/stylesheets/highUtil/highUtil.scss
+++ b/public/stylesheets/highUtil/highUtil.scss
@@ -1,5 +1,9 @@
 @import '../map/map';
+@import '../map/inputBtn.scss';
 
 #map {
     @extend #gmap;
+    .leaflet-control-zoom {
+        display: none;
+    }
 }
