experiment with leaflet.heat using websocket as input.     - setUpMap()         Add function to setup basemap     - setupHeatMapLayer(heat, map, input)         Add function to setup heatmap layer     - connect()         Add function to connect to websocket and subscribe to the topic and draw the heatmap

--- a/public/views/highUtil.jade
+++ b/public/views/highUtil.jade
@@ -4,4 +4,6 @@ block con
     link(rel='stylesheet', href='http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css')
     link(rel='stylesheet', href='build/css/highUtil.min.css')
     #map
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.1/sockjs.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js")
     script(src='build/js/highUtil.min.js')  
