1. highUtil.js: add vis.js for building the timeline for selecting the timewindow for showing the heatmap 2. vis.scss: add this file for the styling for timeline 3. highUtil.jade: change the view to add the slider div 4. layout.jade: change layout to allow interceptor.js 5. main.js: change the sliding panel left value when enabling the side navigation panel 6. build all css and js release files for production

--- a/public/views/highUtil.jade
+++ b/public/views/highUtil.jade
@@ -2,12 +2,10 @@ extends layouts/layout.jade
 
 block con
     link(rel='stylesheet', href='build/css/highUtil.min.css')
+    .loading
     #map
-    .overlap
-         button.btn.btn-default.btn-backward.glyphicon.glyphicon-backward(aria-label="back") 
-         button.btn.btn-default.btn-play.glyphicon.glyphicon-play(aria-label="play") 
-         button.btn.btn-default.btn-forward.glyphicon.glyphicon-forward(aria-label="forward") 
-         button.btn.btn-default.btn-fast-forward.glyphicon.glyphicon-fast-forward(aria-label="fast-forward") 
+    .overlapSlider
+         #sliderVis
     script(src='build/js/highUtil.min.js')  
 //    script(src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.1/sockjs.min.js")
 //    script(src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js")
