--- a/public/stylesheets/highUtil/highUtil.scss
+++ b/public/stylesheets/highUtil/highUtil.scss
@@ -7,3 +7,22 @@
         display: none;
     }
 }
+
+.overlapSlider{
+  position: relative;
+  background: rgba(53, 46, 46, 0.2);
+  border: 2px solid grey;
+  border-left-style: none;
+  border-radius: 0px 10px 10px 0px;
+  color: white;
+  z-index:2;
+  width: 1000px;
+  height: 200px;
+  left: -980px;
+  top: 80px;
+  transition: all .3s ease-in-out;
+}
+
+.overlapSlider:hover {
+    left: 0; 
+}
