--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -7,7 +7,7 @@ block con
         .wrapper
            form.form-signin
              h2.form-signin-heading Please login
-             input.form-control#username(type='text', name='username', placeholder='Email Address', required='', autofocus='')
+             input.form-control#username(type='text', name='username', placeholder='User ID', required='', autofocus='')
              input.form-control#password(type='password', name='password', placeholder='Password', required='')
              label.checkbox
                input#rememberMe(type='checkbox', value='remember-me', name='rememberMe')
