add placeholders for transponder analytics and speed analytics

--- a/public/views/layouts/layout.jade
+++ b/public/views/layouts/layout.jade
@@ -17,6 +17,10 @@ html
          hr
          a(href='highUtil.html') High utilization
          hr
+         a(href='speedAnalytics.html') Speed Analytics 
+         hr
+         a(href='transponderAnalytics.html') Transponder Analytics
+         hr
          a(href='#') Alerts
          hr
          a(href='#') Reports
@@ -24,7 +28,7 @@ html
          a#login(href='javascript:void(0)') Login 
          #footer 
             p A Collabration between MPA & IBM @ alpha version
-    script(src='build/js/interceptor.min.js')
+    //script(src='build/js/interceptor.min.js')
     
     #main
       nav.navbar.navbar-default
