--- a/public/views/layouts/layout.jade
+++ b/public/views/layouts/layout.jade
@@ -28,7 +28,7 @@ html
          a#login(href='javascript:void(0)') Login 
          #footer 
             p A Collabration between MPA & IBM @ alpha version
-    //script(src='build/js/interceptor.min.js')
+    script(src='build/js/interceptor.min.js')
     
     #main
       nav.navbar.navbar-default
